# server/bin/main/openapi/documentation.yaml
@@ -61,7 +61,7 @@ paths:
     post:
       tags: [Auth]
       summary: ورود مادر
-      description: ورود به حساب کاربری با ایمیل و رمز عبور
+      description: ورود به حساب کاربری با نام کاربری و رمز عبور
       requestBody:
         required: true
         content:
@@ -76,7 +76,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AuthResponse'
         '401':
-          description: ایمیل یا رمز عبور اشتباه
+          description: نام کاربری یا رمز عبور اشتباه
 
   /api/auth/me:
     get:
@@ -422,12 +422,11 @@ components:
     # Auth
     RegisterRequest:
       type: object
-      required: [email, password, displayName]
+      required: [username, password, displayName]
       properties:
-        email:
+        username:
           type: string
-          format: email
-          example: mother@example.com
+          example: maryam123
         password:
           type: string
           minLength: 6
@@ -438,11 +437,11 @@ components:
 
     LoginRequest:
       type: object
-      required: [email, password]
+      required: [username, password]
       properties:
-        email:
+        username:
           type: string
-          format: email
+          example: maryam123
         password:
           type: string
 
@@ -463,7 +462,7 @@ components:
       properties:
         id:
           type: integer
-        email:
+        username:
           type: string
         displayName:
           type: string
@@ -809,4 +808,5 @@ components:
           type: boolean
         message:
           type: string
+
 
